--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   "bugs": {
     "url": "https://github.com/Rohan-Shakya/v2/issues"
   },
+  "engines": {
+    "node": "12.20.0"
+  },
+  "keywords": [
+    "heroku"
+  ],
   "homepage": "https://github.com/Rohan-Shakya/v2#readme",
   "dependencies": {
     "cors": "^2.8.5",
