--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,4 @@
-node_modules/
-
-/client/build
-
+/node_modules
+npm-debug.log
 .DS_Store
-/client/.env.local
-/client/.env.development.local
-/client/.env.test.local
-/client/.env.production.local
-
 /*.env
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
