--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Second Iteration of my personal website.",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js",
-    "start": "node server.js"
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
